--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <h1>Hyy Archana Madhu! 🌸</h1>
         <p>Follow the instructions:</p>
         <div style="text-align: left; margin: 20px 0; color: #777; font-size: 0.9rem;">
-            <div>✨ 1. Don’t Smile.</div>
+            <div>✨ 1. 1 Wrong answers = 2 kolathillatha Photos.</div>
             <div>✨ 2. Correct all the answers (20/20).</div>
             <div>✨ 3. Unlock your Passcode for your surprise</div>
         </div>
@@ -190,7 +190,7 @@
         </div>
         <div id="music-view" class="music-view">
             <div style="text-align: center; margin-top: 20px;">
-                <p class="music-text">Every note reminds me of you. <br> You are my melody, Archana. ✨</p>
+                <p class="music-text">Every notes reminds me of you. <br> You are my Fav Person And this song is for Youu, Archaneeee. ✨</p>
                 <div class="center-btn"><div class="back-icon" onclick="backToGifts()">🌸 Back</div></div>
             </div>
         </div>
@@ -200,7 +200,7 @@
         </div>
         <div id="password-view" class="password-view">
             <div style="text-align: center; margin-top: 20px;">
-                <p>Secret Gift Password:</p>
+                <p>Secret Gift Password is:</p>
                 <h2 class="reveal-pass" style="color: #ff4d6d; background: white; padding: 10px; border-radius: 10px; border: 2px dashed #ffafcc; margin-bottom: 25px;">Archanamadhu@7736</h2>
                 <div class="center-btn"><div class="back-icon" onclick="backToGifts()">🌸 Back</div></div>
             </div>
