--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
             color: white; border-color: white; transform: scale(1.03); 
         }
 
+        input[type="password"] {
+            width: 100%; padding: 12px; border-radius: 15px; border: 2px solid #ffccd5;
+            margin-bottom: 15px; text-align: center; font-family: 'Quicksand', sans-serif;
+        }
+
         .shine-effect::after {
             content: '';
             position: absolute;
@@ -172,6 +177,22 @@
         </div>
     </div>
 
+    <div id="penalty-page" class="page">
+        <h2>Hold on Babbyy! 🛑</h2>
+        <p id="penalty-stats"></p>
+        <p style="font-size: 0.8rem; color: #ff4d6d;">(1 Wrong = 2 Kolathillatha Photos)</p>
+        <p>Do you accept this condition to proceed?</p>
+        <button onclick="goToLockPage()">I Accept ❤️</button>
+    </div>
+
+    <div id="lock-page" class="page">
+        <h2>Security Checkpoint 🔒</h2>
+        <p>Enter the Password given by Bibin:</p>
+        <input type="password" id="masterPass" placeholder="Enter Password Here">
+        <button onclick="checkMasterPass()">Unlock My Surprise ✨</button>
+        <p id="pass-error" style="color:red; font-size: 0.8rem; display:none; margin-top:10px;">Oops! Wrong Password Babbyy.</p>
+    </div>
+
     <div id="result-page" class="page">
         <h2>Results!</h2>
         <p id="result-text"></p>
@@ -213,7 +234,7 @@
     const ctx = canvas.getContext('2d');
     const musicCanvas = document.getElementById('musicSymbolsCanvas');
     const mctx = musicCanvas.getContext('2d');
-    let currentStep = 1; let score = 0; let time = 0;
+    let currentStep = 1; let score = 0; let time = 0; let wrongCount = 0;
     
     const colors = ['#ffafcc', '#bde0fe', '#ffc8dd', '#fff', '#ff0054', '#8338ec', '#00f2ff', '#ffea00', '#b9fbc0', '#ff70a6', '#70d6ff', '#fb6f92'];
     const music = document.getElementById('bgMusic');
@@ -299,6 +320,7 @@
             createSparkles(35); 
         } else { 
             btn.classList.add('shake'); 
+            wrongCount++; // TRACKING WRONG ANSWERS
         }
 
         setTimeout(() => {
@@ -311,7 +333,7 @@
 
     function moveNoButton() {
         const btn = document.getElementById('noButton');
-        const grid = document.getElementById('q20-grid'); // Corrected target to q20
+        const grid = document.getElementById('q20-grid');
         const maxX = grid.clientWidth - btn.offsetWidth;
         const maxY = grid.clientHeight - btn.offsetHeight;
         let newX, newY;
@@ -328,10 +350,29 @@
         const effectInterval = setInterval(() => { createMegaSpark(30); createCrackers(20); }, 100);
         setTimeout(() => {
             clearInterval(effectInterval);
-            document.getElementById(`q20`).classList.remove('active'); // Transition from Q20
+            document.getElementById(`q20`).classList.remove('active');
+            // GO TO PENALTY PAGE FIRST
+            document.getElementById('penalty-page').classList.add('active');
+            document.getElementById('penalty-stats').innerHTML = `You clicked <b>${wrongCount}</b> wrong answers.<br>That means you owe Bibin <b>${wrongCount * 2}</b> photos!`;
+        }, 5000); 
+    }
+
+    function goToLockPage() {
+        document.getElementById('penalty-page').classList.remove('active');
+        document.getElementById('lock-page').classList.add('active');
+    }
+
+    function checkMasterPass() {
+        const pass = document.getElementById('masterPass').value;
+        if(pass === "Bibin@2005") {
+            document.getElementById('lock-page').classList.remove('active');
             document.getElementById('result-page').classList.add('active');
             showResult();
-        }, 5000); 
+        } else {
+            document.getElementById('pass-error').style.display = "block";
+            document.getElementById('masterPass').classList.add('shake');
+            setTimeout(() => document.getElementById('masterPass').classList.remove('shake'), 400);
+        }
     }
 
     function createSparkles(count) {
@@ -372,7 +413,7 @@
     function showResult() {
         const text = document.getElementById('result-text');
         const giftBtn = document.getElementById('gift-btn');
-        if (score === 20) { // Updated to 20/20
+        if (score === 20) {
             text.innerText = "Perfect Score 20/20! Archana, you're amazing! ❤️";
             giftBtn.style.display = 'block'; giftBtn.innerText = "Claim Gifts"; giftBtn.onclick = () => {
                 document.getElementById('result-page').classList.remove('active');
