--- a/index.html
+++ b/index.html
@@ -213,9 +213,9 @@
     const mctx = musicCanvas.getContext('2d');
     let currentStep = 1; let score = 0; let time = 0;
     
-    // FETCH OLD WRONG ANSWERS FROM MEMORY
-    let totalWrongInSession = parseInt(localStorage.getItem('bibin_wrong_count')) || 0;
-    let currentAttemptWrong = 0;
+    // --- UPDATED LOGIC FOR CUMULATIVE WRONG ANSWERS ---
+    // Using sessionStorage so it resets to 0 on PAGE REFRESH but stays CUMULATIVE on RESTART click.
+    let totalWrongInSession = parseInt(sessionStorage.getItem('bibin_wrong_count')) || 0;
 
     const colors = ['#ffafcc', '#bde0fe', '#ffc8dd', '#fff', '#ff0054', '#8338ec', '#00f2ff', '#ffea00', '#b9fbc0', '#ff70a6', '#70d6ff', '#fb6f92'];
     const music = document.getElementById('bgMusic');
@@ -226,7 +226,7 @@
     }
     window.addEventListener('resize', resize); resize();
     
-    // Animation Logic (Preserved)
+    // Animation Logic
     const curveLines = Array.from({length: 60}, () => ({
         yBase: Math.random() * canvas.height, amplitude: Math.random() * 60 + 20,
         frequency: Math.random() * 0.004 + 0.001, speed: Math.random() * 0.015 + 0.005,
@@ -284,10 +284,9 @@
             createSparkles(35); 
         } else { 
             btn.classList.add('shake'); 
-            currentAttemptWrong++; 
-            // SAVE TO MEMORY IMMEDIATELY
+            // INCREMENT AND SAVE CUMULATIVELY
             totalWrongInSession++;
-            localStorage.setItem('bibin_wrong_count', totalWrongInSession);
+            sessionStorage.setItem('bibin_wrong_count', totalWrongInSession);
         }
         setTimeout(() => {
             document.getElementById(`q${currentStep}`).classList.remove('active');
@@ -301,6 +300,7 @@
         const grid = document.getElementById('q20-grid');
         const maxX = grid.clientWidth - btn.offsetWidth;
         const maxY = grid.clientHeight - btn.offsetHeight;
+        btn.style.position = 'absolute';
         btn.style.left = (Math.random() * maxX) + "px"; 
         btn.style.top = (Math.random() * maxY) + "px";
     }
@@ -311,10 +311,41 @@
         setTimeout(() => {
             clearInterval(effectInterval);
             document.getElementById(`q20`).classList.remove('active');
-            document.getElementById('penalty-page').classList.add('active');
-            // SHOW THE ACCUMULATED WRONG ANSWERS
-            document.getElementById('penalty-stats').innerHTML = `Across all attempts, you clicked <b>${totalWrongInSession}</b> wrong answers.<br>That means you owe Bibin <b>${totalWrongInSession * 2}</b> photos!`;
+            document.getElementById('result-page').classList.add('active');
+            showResult();
         }, 3000); 
+    }
+
+    function showResult() {
+        const text = document.getElementById('result-text');
+        const giftBtn = document.getElementById('gift-btn');
+        if (score === 20) {
+            text.innerText = "Perfect Score 20/20! Archana, you're amazing! ❤️";
+            giftBtn.style.display = 'block'; giftBtn.innerText = "Proceed to Penalty & Gift"; 
+            giftBtn.onclick = () => {
+                document.getElementById('result-page').classList.remove('active');
+                document.getElementById('penalty-page').classList.add('active');
+                document.getElementById('penalty-stats').innerHTML = `Across all attempts, you clicked <b>${totalWrongInSession}</b> wrong answers.<br>That means you owe Bibin <b>${totalWrongInSession * 2}</b> photos!`;
+            };
+        } else {
+            text.innerText = `Babbyy, you need 20/20! You only got ${score}/20 this time. Your mistakes are piling up!`;
+            giftBtn.style.display = 'block'; giftBtn.innerText = "Restart 🔄"; 
+            // This restarts the quiz but DOES NOT refresh the page, keeping the cumulative count.
+            giftBtn.onclick = () => resetQuizUI(); 
+        }
+    }
+
+    // FUNCTION TO RESTART WITHOUT REFRESHING (Keeping memory)
+    function resetQuizUI() {
+        document.getElementById(`result-page`).classList.remove('active');
+        currentStep = 1;
+        score = 0;
+        // Clean up the buttons from previous round
+        document.querySelectorAll('.options-grid button').forEach(b => {
+            b.classList.remove('shake');
+            b.style.backgroundColor = "";
+        });
+        document.getElementById('q1').classList.add('active');
     }
 
     function goToLockPage() {
@@ -325,33 +356,13 @@
     function checkMasterPass() {
         if(document.getElementById('masterPass').value === "Bibin@2005") {
             document.getElementById('lock-page').classList.remove('active');
-            document.getElementById('result-page').classList.add('active');
-            showResult();
+            document.getElementById('gift-page').classList.add('active');
         } else {
             document.getElementById('pass-error').style.display = "block";
         }
     }
 
-    function showResult() {
-        const text = document.getElementById('result-text');
-        const giftBtn = document.getElementById('gift-btn');
-        if (score === 20) {
-            text.innerText = "Perfect Score 20/20! Archana, you're amazing! ❤️";
-            giftBtn.style.display = 'block'; giftBtn.innerText = "Claim Gifts"; 
-            giftBtn.onclick = () => {
-                document.getElementById('result-page').classList.remove('active');
-                document.getElementById('gift-page').classList.add('active');
-                // Optional: Clear memory once she finishes successfully
-                // localStorage.removeItem('bibin_wrong_count');
-            };
-        } else {
-            text.innerText = `Babbyy, you need 20/20! You only got ${score}/20 this time.`;
-            giftBtn.style.display = 'block'; giftBtn.innerText = "Restart 🔄"; 
-            giftBtn.onclick = () => { window.location.reload(); }; 
-        }
-    }
-
-    // Visual Effects functions preserved...
+    // Visual Effects functions
     function createSparkles(count) { for (let i = 0; i < count; i++) { const p = document.createElement('div'); p.className = 'particle'; p.style.backgroundColor = colors[Math.floor(Math.random()*colors.length)]; p.style.width = '10px'; p.style.height = '10px'; p.style.left = '50%'; p.style.top = '50%'; document.body.appendChild(p); const dX = (Math.random() - 0.5) * 700, dY = (Math.random() - 0.5) * 700; p.animate([{ opacity: 1, transform: 'scale(1)' }, { opacity: 0, transform: `translate(${dX}px, ${dY}px) scale(0)` }], 1000).onfinish = () => p.remove(); } }
     function createMegaSpark(count) { for (let i = 0; i < count; i++) { const p = document.createElement('div'); p.className = 'particle'; p.style.backgroundColor = colors[Math.floor(Math.random() * colors.length)]; p.style.width = '15px'; p.style.height = '15px'; p.style.left = Math.random() * 100 + '%'; p.style.top = Math.random() * 100 + '%'; document.body.appendChild(p); const dX = (Math.random() - 0.5) * 1500, dY = (Math.random() - 0.5) * 1500; p.animate([{ opacity: 1, transform: 'scale(1.5)' }, { opacity: 0, transform: `translate(${dX}px, ${dY}px) scale(0)` }], 2000).onfinish = () => p.remove(); } }
     function createCrackers(count) { for (let i = 0; i < count; i++) { const c = document.createElement('div'); c.className = 'cracker'; c.style.backgroundColor = colors[Math.floor(Math.random()*colors.length)]; c.style.left = Math.random() * 100 + '%'; c.style.top = Math.random() * 100 + '%'; document.body.appendChild(c); const angle = Math.random() * Math.PI * 2; const dist = Math.random() * 1000 + 300; const dX = Math.cos(angle) * dist; const dY = Math.sin(angle) * dist; c.animate([{ transform: `rotate(${angle}rad) translate(0,0) scaleY(1.5)`, opacity: 1 }, { transform: `rotate(${angle}rad) translate(${dX}px, ${dY}px) scaleY(0)`, opacity: 0 }], { duration: 900, easing: 'ease-out' }).onfinish = () => c.remove(); } }
