--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
     <div id="lock-page" class="page">
         <h2>Security Checkpoint 🔒</h2>
-        <p>Enter the Password given by Bibin:</p>
+        <p>Promise your bf that you will accept the penalty then only he gives you the pass code</p>
         <input type="password" id="masterPass" placeholder="Enter Password Here">
         <button onclick="checkMasterPass()">Unlock My Surprise ✨</button>
         <p id="pass-error" style="color:red; font-size: 0.8rem; display:none; margin-top:10px;">Oops! Wrong Password Babbyy.</p>
@@ -212,7 +212,6 @@
     const musicCanvas = document.getElementById('musicSymbolsCanvas');
     const mctx = musicCanvas.getContext('2d');
 
-    // 1 & 3: Standard variables reset to 0 when the page is refreshed.
     let currentStep = 1; 
     let score = 0; 
     let time = 0;
@@ -227,7 +226,6 @@
     }
     window.addEventListener('resize', resize); resize();
     
-    // Background Animation Logic (Kept Intact)
     const curveLines = Array.from({length: 60}, () => ({
         yBase: Math.random() * canvas.height, amplitude: Math.random() * 60 + 20,
         frequency: Math.random() * 0.004 + 0.001, speed: Math.random() * 0.015 + 0.005,
@@ -273,7 +271,21 @@
     }
     animate();
 
+    function shuffleOptions() {
+        for (let i = 1; i <= 19; i++) {
+            const grid = document.querySelector(`#q${i} .options-grid`);
+            if (grid) {
+                const buttons = Array.from(grid.children);
+                for (let j = buttons.length - 1; j > 0; j--) {
+                    const k = Math.floor(Math.random() * (j + 1));
+                    grid.appendChild(buttons[k]);
+                }
+            }
+        }
+    }
+
     function startQuiz() {
+        shuffleOptions();
         document.getElementById('instruction-page').classList.remove('active');
         document.getElementById('q1').classList.add('active');
     }
@@ -285,7 +297,6 @@
             createSparkles(35); 
         } else { 
             btn.classList.add('shake'); 
-            // Increment the cumulative counter
             totalWrongCumulative++;
         }
         setTimeout(() => {
@@ -321,19 +332,21 @@
         } else {
             text.innerText = `Babbyy, you need 20/20! You only got ${score}/20 this time. Your current cumulative mistakes: ${totalWrongCumulative}`;
             giftBtn.style.display = 'block'; giftBtn.innerText = "Restart (Mistakes will keep adding up!) 🔄"; 
-            // 2: Soft Reset - Restart without refreshing the page to keep the calculation cumulative.
             giftBtn.onclick = () => softRestart(); 
         }
     }
 
     function softRestart() {
+        shuffleOptions();
         document.getElementById('result-page').classList.remove('active');
         currentStep = 1;
         score = 0;
-        // Reset all buttons visual state
         document.querySelectorAll('.options-grid button').forEach(b => {
             b.classList.remove('shake');
             b.style.backgroundColor = "";
+            b.style.position = "";
+            b.style.left = "";
+            b.style.top = "";
         });
         document.getElementById('q1').classList.add('active');
     }
@@ -362,7 +375,6 @@
         }
     }
 
-    // Effect Logic (Kept Intact)
     function createSparkles(count) { for (let i = 0; i < count; i++) { const p = document.createElement('div'); p.className = 'particle'; p.style.backgroundColor = colors[Math.floor(Math.random()*colors.length)]; p.style.width = '10px'; p.style.height = '10px'; p.style.left = '50%'; p.style.top = '50%'; document.body.appendChild(p); const dX = (Math.random() - 0.5) * 700, dY = (Math.random() - 0.5) * 700; p.animate([{ opacity: 1, transform: 'scale(1)' }, { opacity: 0, transform: `translate(${dX}px, ${dY}px) scale(0)` }], 1000).onfinish = () => p.remove(); } }
     function createMegaSpark(count) { for (let i = 0; i < count; i++) { const p = document.createElement('div'); p.className = 'particle'; p.style.backgroundColor = colors[Math.floor(Math.random() * colors.length)]; p.style.width = '15px'; p.style.height = '15px'; p.style.left = Math.random() * 100 + '%'; p.style.top = Math.random() * 100 + '%'; document.body.appendChild(p); const dX = (Math.random() - 0.5) * 1500, dY = (Math.random() - 0.5) * 1500; p.animate([{ opacity: 1, transform: 'scale(1.5)' }, { opacity: 0, transform: `translate(${dX}px, ${dY}px) scale(0)` }], 2000).onfinish = () => p.remove(); } }
     function createCrackers(count) { for (let i = 0; i < count; i++) { const c = document.createElement('div'); c.className = 'cracker'; c.style.backgroundColor = colors[Math.floor(Math.random()*colors.length)]; c.style.left = Math.random() * 100 + '%'; c.style.top = Math.random() * 100 + '%'; document.body.appendChild(c); const angle = Math.random() * Math.PI * 2; const dist = Math.random() * 1000 + 300; const dX = Math.cos(angle) * dist; const dY = Math.sin(angle) * dist; c.animate([{ transform: `rotate(${angle}rad) translate(0,0) scaleY(1.5)`, opacity: 1 }, { transform: `rotate(${angle}rad) translate(${dX}px, ${dY}px) scaleY(0)`, opacity: 0 }], { duration: 900, easing: 'ease-out' }).onfinish = () => c.remove(); } }
